--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -22,7 +22,7 @@
         android:id="@+id/textView3"
         android:layout_width="307dp"
         android:layout_height="97dp"
-        android:text="druk up de knop\nen kies dan deze app\nna het inloggen"
+        android:text="druk op de knop\nen kies dan deze app\nna het inloggen"
         android:textAlignment="center"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/button2"
